# TuneScript

./: .gitignore  LICENSE  README.md  setup_dev_env.bat  setup_dev_env.sh
backend/: manage.py  pyproject.toml  requirements.txt
backend/tunescript_app/: __init__.py  admin.py  apps.py  models.py  mutations.py  schema.py  tasks.py  tests.py  types.py  utils.py  views.py
backend/tunescript_app/migrations/: 0001_initial.py
backend/tunescript_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
devtools/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  setup_dev_env.bat  setup_dev_env.sh  shutdown_dev_env.sh
documentation/: technologies.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/components/: Layout.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: apolloClient.ts  queries.ts
frontend/src/pages/: _app.tsx  dashboard.tsx  index.tsx  login.tsx  profile.tsx  register.tsx  search.tsx  upload.tsx
frontend/src/pages/api/: webhook.ts
frontend/src/pages/api/sse-stream/: [id].ts
frontend/src/types/: apollo-upload-client.d.ts
